# faang-finance

./: .gitignore  TODO.txt  dockerfile  ff_flaskapp.pem  nn_config.json  pyproject.toml  test_main.py
data/: AAPL_daily_data.csv  AAPL_daily_data_test.csv  ADBE_daily_data.csv  AMZN_daily_data.csv  GOOG_daily_data.csv  META_daily_data.csv  MSFT_daily_data.csv  NFLX_daily_data.csv  NVDA_daily_data.csv
image/: Dockerfile  requirements.txt
lambda_functions/: get_historical_data.py  get_predictions.py
lambda_scripts/: apply_splits.py  engineer_features.py  fetch_data.py  make_prediction.py  prepare_tensors.py
models/: AAPL_Model.pth  AAPL_model.pth  AAPL_model_20240728_190309.pth  AAPL_model_20240729_214014.pth  AAPL_model_20240729_214224.pth  AAPL_model_20240729_214440.pth  AAPL_model_20240729_214827.pth  AAPL_model_20240729_215144.pth  AAPL_model_20240729_215535.pth  AAPL_model_20240729_215741.pth  AAPL_model_20240729_215856.pth  AAPL_model_20240729_220134.pth  AAPL_model_20240729_220355.pth  AAPL_model_20240729_220823.pth  AAPL_model_20240729_221107.pth  AAPL_model_20240729_221305.pth  AAPL_model_20240729_221513.pth  AAPL_model_20240729_221801.pth  AAPL_model_20240729_222027.pth  AAPL_model_20240729_222218.pth  AAPL_model_20240729_222409.pth  AAPLsimple_Model.pth  ADBE_model.pth  AMZN_model.pth  GOOG_model.pth  META_model.pth  MSFT_model.pth  NFLX_model.pth  NVDA_model.pth
notebooks/: aapl_training.ipynb  appl_analysis.ipynb
predictions/: GOOG_predictions.csv
scripts/: check.py  data_fetching.py  data_normalization.py  data_preprocessing.py  main.py  (+4 more)
(+73 files in other folders)
